objects/ssot__BenefitPrvdSearchableFld__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__BenefitId__c</fullName>
        <label>Benefit</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BenefitName__c</fullName>
        <label>Benefit Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BenefitTypeId__c</fullName>
        <label>Benefit Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BenefitTypeName__c</fullName>
        <label>Benefit Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FacilityGeoLocationId__c</fullName>
        <label>Facility Geo Location</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FacilityId__c</fullName>
        <label>Facility</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FacilityName__c</fullName>
        <label>Facility Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FacilityPhone__c</fullName>
        <label>Facility Phone</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GenderRestrictionDescription__c</fullName>
        <label>Gender Restriction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HighestAgeServedNumber__c</fullName>
        <label>Highest Age Served</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Benefit Provider Searchable Field Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Latitude__c</fullName>
        <label>Latitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LicenseJurisdictionCountry__c</fullName>
        <label>License Jurisdiction Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LicenseJurisdictionRegion__c</fullName>
        <label>License Jurisdiction Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LicenseJurisdictionStateId__c</fullName>
        <label>License Jurisdiction State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LicenseName__c</fullName>
        <label>License Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LicenseStatus__c</fullName>
        <label>License Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Longitude__c</fullName>
        <label>Longitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LowestAgeServedNumber__c</fullName>
        <label>Lowest Age Served</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__NationalProviderIdentifier__c</fullName>
        <label>National Provider Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OperatingDaysList__c</fullName>
        <label>Operating Days List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OperatingHoursId__c</fullName>
        <label>Operating Hours</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OperatingTimeSlotList__c</fullName>
        <label>Operating Time Slot List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PractitionerCertificationType__c</fullName>
        <label>Practitioner Certification Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProviderEducationLevel__c</fullName>
        <label>Provider Education Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProviderGender__c</fullName>
        <label>Provider Gender</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProviderId__c</fullName>
        <label>Provider</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProviderName__c</fullName>
        <label>Provider Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProviderPhotoUrl__c</fullName>
        <label>Provider Photo URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProviderSpeciality__c</fullName>
        <label>Provider Speciality</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProviderType__c</fullName>
        <label>Provider Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SpecialtyId__c</fullName>
        <label>Specialty</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SpecialtyName__c</fullName>
        <label>Specialty Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__UniqueKeyText__c</fullName>
        <label>Unique Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1741334885643_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BenefitPrvdSearchableFld_ProviderId__rel</label>
        <referenceTo>ssot__HealthcareProvider__dlm</referenceTo>
        <relationshipLabel>BenefitPrvdSearchableFld_ProviderId__rel</relationshipLabel>
        <relationshipName>rel_1741334885643_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1741334888202_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BenefitPrvdSearchableFld_FacilityId__rel</label>
        <referenceTo>ssot__HealthcarePractitionerFacility__dlm</referenceTo>
        <relationshipLabel>BenefitPrvdSearchableFld_FacilityId__rel</relationshipLabel>
        <relationshipName>rel_1741334888202_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1741334891321_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BenefitPrvdSearchableFld_BenefitType_rel</label>
        <referenceTo>ssot__BenefitType__dlm</referenceTo>
        <relationshipLabel>BenefitPrvdSearchableFld_BenefitType_rel</relationshipLabel>
        <relationshipName>rel_1741334891321_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>